# RacePace

./: .gitignore  README.md  pyproject.toml
racepace/: README.md  __init__.py  main.py  pyproject.toml  schema.py
racepace/adapters/: README.md  acc.py  base.py  f1.py  mock.py  simhub.py
racepace/agents/: README.md  analyst.py  base.py  coach.py  engineer.py
racepace/cli/: analyze.py  coach.py  engineer.py  extract_track.py  fastf1_cli.py  main.py  openf1_cli.py  record.py  save_reference.py
racepace/comms/: text_out.py
racepace/data/: README.md  fastf1_import.py  openf1_import.py
racepace/features/: deg.py  deltas.py  laps.py  reference.py  situation.py  strategy.py  track_map.py
racepace/storage/: __init__.py  ringbuffer.py  session_store.py
racepace/tests/: conftest.py  test_analyst_report.py  test_coach.py  test_engineer.py  test_f1_packet.py  test_features.py  test_reference.py  test_ringbuffer.py  test_schema_roundtrip.py  test_simhub_map.py  test_strategy.py  test_track_map.py  test_voice.py  voice_test.py
racepace/tests/fixtures/: build_fixture.py  build_track_fixtures.py
racepace/tracks/: README.md
racepace/tracks/acc/: synthetic_test.json
racepace/tracks/f1/: monza.json  synthetic_test.json
racepace/voice/: README.md  cache.py  live_tts.py  player.py  voice_out.py
